==> VeriSilicon/VGLite_4.x/VGLiteKernel/zephyr/vg_lite_hal.c <==
#include "vg_lite_platform.h"
#include "../vg_lite_kernel.h"
#include "../vg_lite_hal.h"
#include "../vg_lite_hw.h"
#include <soc.h>
#include <device.h>
#include <spicache.h>
#include <board_cfg.h>
#include <sys/sys_heap.h>
#  include <arch/arm/aarch32/cortex_m/cmsis.h>
#include <logging/log.h>
#define VGLITE_MEM_ALIGNMENT 64
#define VG_LITE_K_MEM_POOL_SIZE                                                                    \
    (CONFIG_VG_LITE_K_MEM_POOL_SIZE + VGLITE_MEM_ALIGNMENT - 1) & ~(VGLITE_MEM_ALIGNMENT - 1)

void vg_lite_hal_barrier(void)
{
    /* TODO: Memory barrier. */
    /* flush the write buffer for uncache and write through memory */
    spi1_cache_ops(SPI_WRITEBUF_FLUSH, (void *)SPI1_UNCACHE_ADDR, 0);
}

void vg_lite_hal_deinitialize(void)
{
    LOG_DBG("gpu deinit begin\n");

    /* Disable interrupt. */
    irq_disable(IRQ_ID_GPU);

    /* TODO: Remove clock. */
    acts_clock_peripheral_disable(CLOCK_ID_GPU);

    /* TODO: Remove power. */
    sys_clear_bit(PWRGATE_DIG, 25); /* power off */

    LOG_INF("gpu deinit ok\n");
}

vg_lite_error_t vg_lite_hal_allocate(uint32_t size, void **memory)
{
    struct vg_lite_dev_data *data = gp_dev_data;
    vg_lite_error_t error = VG_LITE_SUCCESS;
    k_spinlock_key_t key;

    if (data == NULL) {
        ONERROR(VG_LITE_NO_CONTEXT);
    }

    if (size == 0 || NULL == memory) {
        ONERROR(VG_LITE_INVALID_ARGUMENT);
    }

    key = k_spin_lock(&data->heap_lock);
    *memory = sys_heap_alloc(&data->heap, size);
    k_spin_unlock(&data->heap_lock, key);

    if (NULL == memory) {
        ONERROR(VG_LITE_OUT_OF_MEMORY);
    }

on_error:
    return error;
}

vg_lite_error_t vg_lite_hal_free(void *memory)
{
    struct vg_lite_dev_data *data = gp_dev_data;
    vg_lite_error_t error = VG_LITE_SUCCESS;
    k_spinlock_key_t key;

    if (data == NULL) {
        return VG_LITE_NO_CONTEXT;
    }

    if (memory) {
        key = k_spin_lock(&data->heap_lock);
        sys_heap_free(&data->heap, memory);
        k_spin_unlock(&data->heap_lock, key);
    }

    return error;
}

vg_lite_error_t vg_lite_hal_allocate_contiguous(unsigned long size, void ** logical, void ** klogical, uint32_t * physical, void ** node)
{
    struct vg_lite_dev_data *data = gp_dev_data;
    unsigned long aligned_size;
    k_spinlock_key_t key;

    if (data == NULL) {
        return VG_LITE_NO_CONTEXT;
    }

    /* Align the size to 64 bytes. */
    aligned_size = VG_LITE_ALIGN(size, VGLITE_MEM_ALIGNMENT);

    key = k_spin_lock(&data->heap_lock);
    *node = sys_heap_aligned_alloc(&data->heap, VGLITE_MEM_ALIGNMENT, aligned_size);
    k_spin_unlock(&data->heap_lock, key);

    if (*node == NULL) {
        LOG_ERR("gpu alloc %lu bytes failed!\n", size);
        return VG_LITE_OUT_OF_MEMORY;
    }

    *node = cache_to_wt_wna_cache(*node);
    *logical = *node;
    *klogical = *node;
    *physical = (uint32_t)cache_to_uncache(*node);

    return VG_LITE_SUCCESS;
}

void vg_lite_hal_free_contiguous(void * memory_handle)
{
    struct vg_lite_dev_data *data = gp_dev_data;
    k_spinlock_key_t key;

    if (data) {
        memory_handle = wt_wna_cache_to_cache(memory_handle);

        key = k_spin_lock(&data->heap_lock);
        sys_heap_free(&data->heap, memory_handle);
        k_spin_unlock(&data->heap_lock, key);
    }
}

void vg_lite_hal_poke(uint32_t address, uint32_t data)
{
    /* Write data to the GPU register. */
    sys_write32(data, GPU_REG_BASE + address);
}

int32_t vg_lite_hal_wait_interrupt(uint32_t timeout, uint32_t mask, uint32_t * value)
{
    struct vg_lite_dev_data *data = gp_dev_data;
    int result;

    if (data == NULL) {
        return 0;
    }

    result = k_sem_take(&data->wait_sem,
            (timeout == VG_LITE_INFINITE) ? K_FOREVER : K_MSEC(timeout));

    /* Report the event(s) got. */
    if (value != NULL) {
        *value = data->int_flags & mask;
    }

    data->int_flags = 0;

    /*
     * FIXME: Flush GPU write buffer here ?
     *
     * Synchronization will finally go to this routine.
     */
    sys_set_bit(SPI1_GPU_CTL, 24);

    return (result == 0) ? 1 : 0;
}
